think I have the  nav link alignment issue solved.  trick is to not put padding on the section, and put it on the titleWrap div inside it.  also fixed an issue with the #projects section titleWrap and images.

--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -144,12 +144,17 @@
 	// @media screen and (max-width: 768px) and (min-width: 500px) and (orientation: portrait){
 	// 	height: 55rem;
 	// }
+	@media screen and (max-width: 480px){
+		.titleWrap{
+			padding-top: 10rem;
+		}
+	}
+
 	@media screen and (max-width: 480px) and (min-width: 320px) and (orientation: landscape){
 		height: 30rem;
 	}
 	@media screen and (max-width: 320px) and (orientation: portrait){
 		height: 40rem;
-
 	}
 
 }
