--- a/stylesheets/_projects.scss
+++ b/stylesheets/_projects.scss
@@ -4,7 +4,6 @@
 	width: 100%;
 	background-color: black;
 	//to patch between background-transparent sections and this one
-	padding-top: 8rem;
 	padding-bottom: 40rem;
 }
 
@@ -69,7 +68,7 @@
 	#projects{	
 		margin-top: 15rem;
 
-		img{
+		.projectWrap img{
 			margin-top: 5rem;
 			margin-left: 5%;
 		}
@@ -146,7 +145,7 @@
 	 }
 
 	 @media screen and (max-width: 768px) and (orientation: landscape){
-	 	height: 160rem;
+	 	height: 120rem;
 	 }
 
 	//phone portrait
